# ML_in_E_Commerce

./: .gitignore  README.md
Clustering/: .gitignore  Makefile  README.md  config.yaml  main.py  requirements.txt  (+1 more)
Data/: 1.xml  (+8 more)
Time_Series_Forecasting/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt  streamlit_app.py
Time_Series_Forecasting/.github/workflows/: cd.yml  ci.yml
Time_Series_Forecasting/models/: _mlflow_metadata.json  champion_model_metadata.json
Time_Series_Forecasting/monitoring/: prometheus.yml
Time_Series_Forecasting/monitoring/grafana/dashboards/: forecast_api.json
Time_Series_Forecasting/notebooks/: 01_eda_and_cleaning.ipynb  02_baseline_models.ipynb  03_advanced_modeling.ipynb
Time_Series_Forecasting/results/: all_model_results.csv  baseline_predictions.csv  baseline_results.csv  feature_importance.csv
Time_Series_Forecasting/src/: config.py
Time_Series_Forecasting/src/data/: ingest.py
Time_Series_Forecasting/src/features/: build_features.py
Time_Series_Forecasting/src/models/: detect_anomalies.py  registry.py  train_model.py
Time_Series_Forecasting/src/monitoring/: data_quality.py  drift_detector.py  retraining.py  scheduler.py
Time_Series_Forecasting/src/scripts/: run_eda.py
Time_Series_Forecasting/src/serving/: app.py  auth.py
Time_Series_Forecasting/src/visualization/: plot_results.py
Time_Series_Forecasting/tests/: test_api_integration.py  test_auth.py  test_data_quality.py  test_drift.py  test_features.py  test_ingest.py  test_registry.py
(+37 files in other folders)
