[tool.poetry]
name = "time-series-forecasting"
version = "0.1.0"
description = "End-to-End Machine Learning project for Time Series Forecasting and Anomaly Detection based on E-commerce data."
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.0.0"
numpy = "^1.24.0"
statsmodels = "^0.14.0"
xgboost = "^2.0.0"
prophet = "^1.1.5"
scikit-learn = "^1.3.0"
mlflow = "^2.10.0"
plotly = "^5.18.0"
lxml = "^5.1.0"
jupyter = "^1.0.0"
matplotlib = "^3.8.0"
seaborn = "^0.13.0"
scipy = "^1.12.0"
optuna = "^3.5.0"
joblib = "^1.3.0"
pyarrow = "^15.0.0"
fastapi = "^0.109.0"
uvicorn = "^0.27.0"
streamlit = "^1.31.0"
prometheus-client = "^0.20.0"
evidently = "^0.4.0"
apscheduler = "^3.10.0"
pydantic-settings = "^2.0.0"
python-jose = {version = "^3.3.0", extras = ["cryptography"]}
slowapi = "^0.1.9"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-cov = "^5.0.0"
ruff = "^0.3.0"
black = "^24.0.0"
mypy = "^1.8.0"

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "S", "B"]
ignore = ["S101", "S104", "S105", "S110", "S301", "S314", "S603", "S607", "E501", "N803", "N806"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
